HVAC Backup 2/objects/PMS_Debit_Master__c.object
<CustomObject>
    <fields>
        <fullName>Family_Code__c</fullName>
        <label>Family Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Family_Code__c</fullName>
        <label>Sub Family Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ton_Max__c</fullName>
        <label>Ton Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ton_Min__c</fullName>
        <label>Ton Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ton__c</fullName>
        <label>Ton</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PMS Debit Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Family_Code__c</columns>
        <columns>Sub_Family_Code__c</columns>
        <columns>Rate__c</columns>
        <columns>Ton__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PMS-{0000}</displayFormat>
        <label>PMS Debit Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PMS Debit Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>